Prepared for 1st release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 pluginGroup = com.hlianole.codecomplexity
-pluginName = Java Code Complexity Analyzer
+pluginName = Code Complexity Analyzer
 
-pluginRepositoryUrl = TODO
+pluginRepositoryUrl = https://github.com/hlianole/code_complexity_plugin
 pluginVersion = 1.0.0
 
 pluginSinceBuild = 233
