Fix pipeline errors v2

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ pluginName = Code Complexity Analyzer
 pluginRepositoryUrl = https://github.com/hlianole/code_complexity_plugin
 pluginVersion = 1.0.0
 
-pluginSinceBuild = 233
+pluginSinceBuild = 231
+pluginUntilBuild = 241.*
 
 platformType = IC
 platformVersion = 2024.3.6
